Adjust container width and text styling in index.html

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         }
 
         .container {
-            max-width: 800px;
+            max-width: 600px;
             padding: 2rem;
             text-align: center;
             opacity: 0;
@@ -59,8 +59,8 @@
         }
 
         #reflection-content {
-            font-size: 2rem;
-            line-height: 1.6;
+            font-size: 2.8rem;
+            line-height: 1.4;
             font-weight: 300;
             margin-bottom: 2rem;
             min-height: 200px;
@@ -116,6 +116,7 @@
 
 <body>
 
+    <div class="container">
 
 
         <div id="reflection-content">
